--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     />
     <meta
       name="description"
-      content="A hyper-interactive, futuristic identity site-card with kinetic layers and responsive signals."
+      content="Roman Rublev's site-card"
     />
-    <title>Site Card · Hyper-Signal Interface</title>
+    <title>rmnrblv</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
